capitalize image file name first letter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="mikyas.png" alt="Mikyas's portrait"></td>
+      <td>  <img src="Mikyas.png" alt="Mikyas's portrait"></td>
       <td><h1>Mikyas's Personal Site</h1>
       <p>Founder & CEO of <strong>Fegegta.com</strong></p>
       <p>I am a computer programing student working towards thegoal of building a succesful fintech industry</p></td>
